<?xml version="1.0"?>
<package>
    <name>esiaf_wav_player</name>
    <version>0.0.1</version>
    <description>A component that feeds the esiaf_ros pipeline audio from a wav file</description>

    <maintainer email="rfeldh@gmail.com">Robert Feldhans</maintainer>
    <license>---none---</license>
    <author>rfeldhans</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>esiaf_ros</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>package</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>esiaf_ros</run_depend>

</package>
